tests/snapshots/examples_fixtures/type_system__failing__45_effect_row_subtract_missing_io.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/45_effect_row_subtract_missing_io.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/type_system/failing/45_effect_row_subtract_missing_io.flx:66:5
   |
66 |     run_with_row(io_only)
   |     ^^^^^^^^^^^^^^^^^^^^^
   |     --------------------- parameter 1 has type `() -> Unit with Console, FileSystem, Stdin, Env`

   |     --------------------- this type mismatch is reported here

Note:
  expected parameter type: () -> Unit with FileSystem, Stdin, Env
  found parameter type: () -> Unit with Console, FileSystem, Stdin, Env
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `() -> Unit with FileSystem, Stdin, Env` consistently.


error[E400]: Missing Effect

requires effect `FileSystem` but the enclosing context does not provide it

  examples/type_system/failing/45_effect_row_subtract_missing_io.flx:66:5
   |
66 |     run_with_row(io_only)
   |     ^^^^^^^^^^^^^^^^^^^^^
   |     --------------------- requires `FileSystem`

Hint:
  annotate the enclosing function with `with FileSystem`


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 2 errors.
== stdout ==
<not executed>
