tests/snapshots/examples_fixtures/type_system__failing__46_duplicate_main_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/46_duplicate_main_function.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E410]: DUPLICATE MAIN FUNCTION

Program can contain only one top-level `fn main`.

  --> examples/type_system/failing/46_duplicate_main_function.flx:7:1
  |
3 | fn main() {

4 |     1

5 | }

6 | 

7 | fn main() {
  | ^^^^^^^^^^^
8 |     2
  | ^^^^^
9 | }
  | ^

Hint:
  Keep a single `fn main` entry point.
== stdout ==
<not executed>
