tests/snapshots/examples_fixtures/type_system__failing__47_main_with_parameters.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/47_main_with_parameters.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E411]: Invalid Main Signature

`fn main` cannot take parameters.

  examples/type_system/failing/47_main_with_parameters.flx:3:1
  |
3 | fn main(x: Int) {
  | ^^^^^^^^^^^^^^^^^
4 |     x
  | ^^^^^
5 | }
  | ^

Hint:
  Define `fn main()` with zero parameters.
== stdout ==
<not executed>
