tests/snapshots/examples_fixtures/type_system__failing__50_invalid_main_signature_no_root_discharge_noise.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/50_invalid_main_signature_no_root_discharge_noise.flx
== compile ==
failed (compile)
== diagnostics ==
error[E412]: Invalid Main Return Type

`fn main` must return `Unit` (or omit return type).

  examples/type_system/failing/50_invalid_main_signature_no_root_discharge_noise.flx:27:14
   |
27 | fn main() -> Int with Console {
   |              ^^^
   |              --- invalid `main` return type

Hint:
  Change signature to `fn main() { ... }` or `-> Unit`.
== stdout ==
<not executed>
