tests/snapshots/examples_fixtures/type_system__failing__54_strict_any_param_rejected.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/54_strict_any_param_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
error[E423]: Unknown Type

I can't find a type named `Any`.

  examples/type_system/failing/54_strict_any_param_rejected.flx:1:17
  |
1 | public fn id(x: Any) -> Int {
  |                 ^^^
  |                 --- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.
== stdout ==
<not executed>
