tests/snapshots/examples_fixtures/type_system__failing__55_strict_any_return_rejected.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/55_strict_any_return_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
error[E423]: Unknown Type

I can't find a type named `Any`.

  examples/type_system/failing/55_strict_any_return_rejected.flx:44:25
   |
44 | public fn id(x: Int) -> Any {
   |                         ^^^
   |                         --- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.


error[E300]: Return Type Mismatch

The body of `id` does not match its declared return type.

  examples/type_system/failing/55_strict_any_return_rejected.flx:45:5
   |
44 | public fn id(x: Int) -> Any {
   |                         --- `id` was declared to return `Any`
45 |     x
   |     ^
   |     - this expression has type `Int`
   |
help: Change return type to `Int`
   |
44 | public fn id(x: Int) -> Int {
   |                         ~~~

Note:
  declared return type: Any
  body type: Int

Help:
  Return a `Any` value from `id` or change its annotation.

Found 2 errors.
== stdout ==
<not executed>
