tests/snapshots/examples_fixtures/type_system__failing__56_strict_any_nested_rejected.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/56_strict_any_nested_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
error[E423]: Unknown Type

I can't find a type named `Any`.

  examples/type_system/failing/56_strict_any_nested_rejected.flx:59:26
   |
59 | public fn first(xs: List<Any>) -> Any {
   |                          ^^^
   |                          --- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.


error[E423]: Unknown Type

I can't find a type named `Any`.

  examples/type_system/failing/56_strict_any_nested_rejected.flx:59:35
   |
59 | public fn first(xs: List<Any>) -> Any {
   |                                   ^^^
   |                                   --- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.


error[E300]: Return Type Mismatch

The body of `first` does not match its declared return type.

  examples/type_system/failing/56_strict_any_nested_rejected.flx:60:5
   |
59 | public fn first(xs: List<Any>) -> Any {
   |                                   --- `first` was declared to return `Any`
60 |     1
   |     ^
   |     - this expression has type `Int`
   |
help: Change return type to `Int`
   |
59 | public fn first(xs: List<Any>) -> Int {
   |                                   ~~~

Note:
  declared return type: Any
  body type: Int

Help:
  Return a `Any` value from `first` or change its annotation.

Found 3 errors.
== stdout ==
<not executed>
