tests/snapshots/examples_fixtures/type_system__failing__64_hm_inferred_call_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/64_hm_inferred_call_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `b` does not match its type annotation.

  examples/type_system/failing/64_hm_inferred_call_mismatch.flx:34:18
   |
34 |     let b: Int = f("x")
   |                  ^^^^^^
   |                  ------ this value has type `String`

   |            --- but `b` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `b` to a `Int` value or update the annotation.
== stdout ==
<not executed>
